add_executable(exampleEDT3D exampleEDT3D.cpp)
target_link_libraries(exampleEDT3D dynamicedt3d)

add_executable(exampleEDTSocialOctomap exampleEDTSocialOctomap.cpp)
target_link_libraries(exampleEDTSocialOctomap dynamicedt3d)

add_executable(exampleEDTSocialOctomapStamped exampleEDTSocialOctomapStamped.cpp)
target_link_libraries(exampleEDTSocialOctomapStamped dynamicedt3d)